 * added support for EPS/PS contour files
 * added adaptive positioning for DropCutter strategy (improves precision)
 * allow conventional/climb milling style for ContourFollow and Engrave strategies
 * added support for single-line fonts text (based on fonts from QCAD)
 * parallel and distributed processing is configurable in a dialog
 * visualize movements up to safety height properly
 * unify DropCutter behaviour for models that are higher than the defined bounding box
  * always move up to safety height in this case
 * optional visualization of toolpath direction

Version 0.4.0.1 - 2010-10-24
 * disabled parallel processing for Windows standalone executable
   (a real fix will follow later)

Version 0.4 - 2010-10-19
 * use all available CPU cores for parallel processing
  * this requires at least Python 2.6 or the "python-multiprocessing" package
 * a standalone windows executable is available (experimental)
 * added an improved contour toolpath strategy (ContourFollow)
  * see http://fab.senselab.org/node/43
 * added options for conventional/climb milling
 * added automatic support grid distribution for contour models
 * allow to reverse the direction of a 2D contour model
 * beautification of the process name (via python-setproctitle)
 * added experimental cluster processing (server mode)
 * added G61/64 GCode settings for path precision
 * Usability:
  * added optional "orthogonal" view (instead of perspective)
  * added a "recent files" item to the file menu
  * added the transparency (alpha) component to all configurable colors
  * added "remaining time" estimation for all operations
  * pre-select output filenames of "Save as" dialogs based on the name of the model file
 * Bugs fixed:
  * SVG import: work around a bug in pstoedit (shipped with Ubuntu Lucid)
  * fixed various problems with the support grid

Version 0.3 - 2010-08-16
 * added support for importing contour paths from SVG files (requires Inkscape and pstoedit)